WebKitTools:

2009-07-08  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=27109

        Fix side-effects in the Qt DRT with tests using application fonts.

        Detect if a test used application fonts and re-initialize the fontconfig
        application fontset accordingly.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::open): call initializeFonts and remove all application fonts
        after running a testcase.
        (WebCore::DumpRenderTree::initializeFonts): Moved fontconfig initialization code
        here from main.
        * DumpRenderTree/qt/DumpRenderTree.h: Declare initializeFonts.
        * DumpRenderTree/qt/main.cpp:
        (main): Moved fontconfig initialization code to DRT::initializeFonts.

LayoutTests:

2009-07-08  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=27109

        Remove various tests from the Qt skip list that previously failed
        due to DRT side-effects.

        * platform/qt/Skipped:

Canonical link: https://commits.webkit.org/37359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45706 268f45cc-cd09-0410-ab3c-d52691b4dbfc