WebKitTools/DumpRenderTree/qt/DumpRenderTree.h
@@ -72,6 +72,10 @@ public:
 
     QWebPage *webPage() const { return m_page; }
 
+#if defined(Q_WS_X11)
+    static void initializeFonts();
+#endif
+
 public Q_SLOTS:
     void initJSObjects();
     void readStdin(int);
